--- a/pub/tmp1/tmp1_2/movies.html
+++ b/pub/tmp1/tmp1_2/movies.html
@@ -1,6 +1,12 @@
   The Fifth Element
-  - https://www.youtube.com/watch?v=ZH4islqoA8o
+  - https://www.youtube.com/embed/ZH4islqoA8o
   The Dirty Dozen
-  - https://www.youtube.com/watch?v=ff1V6ywnWcY
+  - https://www.youtube.com/embed/ff1V6ywnWcY
   Escape from New York
-  - https://www.youtube.com/watch?v=ckvDo2JHB7o
+  - https://www.youtube.com/embed/ckvDo2JHB7o
+  Kill Bill Vol. 1
+  - https://www.youtube.com/embed/3sbKt3ptUJo
+  Kill Bill Vol. 2
+  - https://www.youtube.com/embed/TnSTPTs_RiA
+  Cowboy Bebop
+  - https://www.youtube.com/embed/Au1AO1xaEts
