Small tweaks and tidy up to markup, css, and folders.

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Movie Trailers</title>
     <link 
-      href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400|Shrikhand|Tinos" 
+      href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400|Shrikhand" 
       rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gridlex/2.2.3/gridlex.min.css">
