Some tidy up, documentation, and attribution double check.

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <header class="title">
       <h1 class="title__text">Movies</h1>
     </header>
+    <img class="tmdb-logo" src="293x302-powered-by-square-blue.png">
     <section class="posters">
       <ul class="grid-4 grid_md-2 grid_sm-1">
       {{#movies}}
@@ -55,5 +56,10 @@
       </div>
     {{/movies}}
     </section>
+    <footer class="tail">
+      <small>
+        This product uses the TMDb API but is not endorsed or certified by TMDb.
+      </small>
+    </footer>
   </body>
 </html>
